Se agrega una opcion al menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#destinos">Destinos</a></li>
                 <li><a href="#actividades">Actividades</a></li>
                 <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#localización">Contacto</a></li>
             </ul>
         </nav>
     </header>
