Se agrega cambios en js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <li><a href="#destinos">Destinos</a></li>
                 <li><a href="#actividades">Actividades</a></li>
                 <li><a href="#contacto">Contacto</a></li>
-                <li><a href="#localización">Localización</a></li>
             </ul>
         </nav>
     </header>
@@ -72,5 +71,8 @@
         <p>Dirección: Sigchos, Cotopaxi, Ecuador</p>
         <p>&copy; 2024 Turismo Sigchos. Todos los derechos reservados.</p>
     </footer>
+
+    <!-- Enlazando el archivo JavaScript -->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
